--- a/index.html
+++ b/index.html
@@ -39,13 +39,36 @@
       </div>
       <div class="main util-flex">
         <form class="form">
-          <span class="first-number">8</span>
-          <span class="operator">+</span>
-          <span class="second-number">8</span>
-          <span class="equal-sign">=</span>
-          <br />
+          <div class="wrapper util-flex">
+            <span class="first-number">8</span>
+            <span class="operator">+</span>
+            <span class="second-number">8</span>
+            <span class="equal-sign">=</span>
+          </div>
           <input type="number" class="result" />
         </form>
+      </div>
+      <div class="stats">
+
+          <div>&nbsp;</div>
+          <div class="icon">
+            <ion-icon name="baseball-outline"></ion-icon>
+          </div>
+          <div class="icon">
+            <ion-icon name="barbell-outline"></ion-icon>
+          </div>
+          <div class="icon">
+            <ion-icon name="add-outline"></ion-icon>
+          </div>
+           <div class="stat-1">0</div>
+           <div class="stat-2">0</div>
+          <div class="icon">
+            <ion-icon name="remove-outline"></ion-icon>
+          </div>
+           <div class="stat-3">0</div>
+           <div class="stat-4">0</div>
+         
+      </div>
       </div>
     </div>
   </body>
